[project]
name = "qtmvvm"
version = "1.0.1"
description = "MVVM library for Qt with observable properties and data bindings."
readme = "README_EN.md"
requires-python = ">=3.10"
dependencies = [
    "qtpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qtmvvm"]

[project.urls]
Homepage = "https://github.com/dail45/qtmvvm"
Documentation = "https://github.com/dail45/qtmvvm/blob/main/DOCS_EN.md"
Repository = "https://github.com/dail45/qtmvvm"
Issues = "https://github.com/dail45/qtmvvm/issues"
